[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/GameUI/ItemButton.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontBetterPixels32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/FontBetterPixels24.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/GameUI/StyleboxItemSelectPanel.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxLine" id=2]
grow_begin = -8.0
grow_end = -8.0
thickness = 3

[sub_resource type="StyleBoxLine" id=3]
grow_begin = -32.0
grow_end = -32.0

[node name="ItemButton" type="Button"]
margin_left = 30.0
margin_top = -1.0
margin_right = 158.0
margin_bottom = 95.0
rect_min_size = Vector2( 128, 96 )
hint_tooltip = "
"
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut_in_tooltip = false
expand_icon = true
script = ExtResource( 1 )

[node name="ItemTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -7.62939e-06
margin_right = -2.0
margin_bottom = 167.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
margin_right = 124.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Iron ring"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 30.0
margin_right = 124.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 2 )

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 124.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 3 )
text = "Passes through enemies, bounces around."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 87.0
margin_right = 124.0
margin_bottom = 91.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 3 )

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
margin_top = 95.0
margin_right = 124.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.595, 0.46, 1 )
text = "Damage: 5
Speed: 1.25
Health: 25"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
